syntax = "proto3";

package mall.api.v1;

option go_package = "geekstudy.example/go/4week-engineering/mall/api/v1;v1";

import "google/api/annotations.proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductReply) {
    option (google.api.http) = {
      post: "/v1/product/"
      body: "*"
    };
  }
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductReply) {
    option (google.api.http) = {
      put: "/v1/product/{id}"
      body: "*"
    };
  }
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply) {
    option (google.api.http) = {
      delete: "/v1/product/{id}"
    };
  }
  rpc GetProduct (GetProductRequest) returns (GetProductReply) {
    option (google.api.http) = {
      get: "/v1/product/{id}"
    };
  }
  rpc ListProduct (ListProductRequest) returns (ListProductReply) {
    option (google.api.http) = {
      get: "/v1/product/"
    };
  }
}

message Product {
  int64  id    = 1;
  string name  = 2;
  int64  price = 3;
  int64  like  = 4;
}

message CreateProductRequest {
  string name  = 1;
  int64  price = 2;
}

message CreateProductReply {
  Product Product = 1;
}

message UpdateProductRequest {
  int64  id    = 1;
  string name  = 2;
  int64  price = 3;
}

message UpdateProductReply {
  Product Product = 1;
}

message DeleteProductRequest {
  int64 id = 1;
}
message DeleteProductReply {
}

message GetProductRequest {
  int64 id = 1;
}

message GetProductReply {
  Product Product = 1;
}

message ListProductRequest {
}

message ListProductReply {
  repeated Product results = 1;
}
